--- a/scss/_paginaadministracion.scss
+++ b/scss/_paginaadministracion.scss
@@ -2,7 +2,7 @@ $color_1: white;
 $color_2: #f3f3f3;
 $color_3: #000;
 $font-family_1: Verdana, Geneva, Tahoma, sans-serif;
-$font-family_2: Verdana;
+$font-family_2: Verdana, Geneva, Tahoma, sans-serif;
 $background-color_1: rgb(255, 84, 5);
 $background-color_2: rgb(255, 102, 0);
 
@@ -18,7 +18,7 @@ $background-color_2: rgb(255, 102, 0);
 	gap: 20px 20px;
 }
 .porqueadmin {
-	padding: 1.875;
+	padding: 1.875rem;
 	margin-right: 50%;
 	margin-top: 5rem;
 	background-color: $background-color_1;
